--- a/angular-src/src/app/components/config/qrcode/qrcode.component.html
+++ b/angular-src/src/app/components/config/qrcode/qrcode.component.html
@@ -1,3 +1,17 @@
+<div bsModal #smModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Are you sure you want to delete <b>{{userDeletedName}}</b> ?</h4>
+      </div>
+      <div class="modal-body">
+        <button type="button" class="btn btn-success btn-modal" (click)="smModal.hide()" (click)="deleteUser()">Yes</button>
+        <button type="button" class="btn btn-danger btn-modal" (click)="smModal.hide()">No</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="container" style="color: white">
     <h2 class="page-header">QRcode</h2>
     <form (submit)="onQRcodeSubmit()">
@@ -18,8 +32,14 @@
       
       <div> <input type="submit" class="btn btn-primary" value="Create"> </div>
     </form>
-    <div>
+    <div class="pic">
          <qr-code id="base64" [value]= "content" [size]="150"></qr-code> 
     </div>
-  
   </div>
+  <div class="list-floor" *ngFor="let user of users | reverse">
+      <label for="label01">Nhãn 01</label>: <input type="checkbox" id="label01" name="label01" value="" />
+    <a class="list-group-item"
+        (click)="getuser(user.name, user._id)"
+        [routerLinkActive]="['floor-active']">
+      <button type="button" class="fa fa-minus-circle" (click)="smModal.show()"></button> {{user.name}}</a>
+    </div>
