--- a/angular-src/src/app/components/config/rules/rule/ifconditions/relational-operation/relational-operation.component.html
+++ b/angular-src/src/app/components/config/rules/rule/ifconditions/relational-operation/relational-operation.component.html
@@ -82,9 +82,15 @@
     </div>
   </div>
 </div>
-<div class="row" [hidden]="editHidden||sliderHidden||!dimmable">
+<div *ngIf="dimmable==true && typeOfLight!=='Air'" class="row" [hidden]="editHidden||sliderHidden||!dimmable">
   <md-slider min="{{sliderMinValue}}"
-            max="{{sliderMaxValue}}"
+            max="{{sliderMaxValue}}" [thumb-label]="true"
+            [(ngModel)]="value"
+            (input)="getValue($event.value)">
+  </md-slider>
+</div>
+<div *ngIf="dimmable==true && typeOfLight=='Air'" class="row" [hidden]="editHidden||sliderHidden||!dimmable">
+  <md-slider min="18" max="30" step="1" [thumb-label]="true"
             [(ngModel)]="value"
             (input)="getValue($event.value)">
   </md-slider>
